unpackaged/main/default/objects/ff_frb__Financial_Report__c/ff_frb__Financial_Report__c.object-meta.xml
<CustomObject>
    <description>Stores customized reports created using Financial Report Builder.</description>
    <label>Financial Report</label>
    <nameField>
        <label>Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Reports</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>