unpackaged/main/default/objects/ff_frb__Financial_Report__c/fields/ff_frb__Description__c.field-meta.xml
<CustomField>
    <fullName>ff_frb__Description__c</fullName>
    <description>The description of the report.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>