unpackaged/main/default/objects/ff_frb__Financial_Report__c/fields/ff_frb__FilterConfiguration3__c.field-meta.xml
<CustomField>
    <fullName>ff_frb__FilterConfiguration3__c</fullName>
    <description>Third of the five configurations available for query filters.</description>
    <label>Filter Configuration 3</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>