unpackaged/main/default/objects/ff_frb__Financial_Report__c/fields/ff_frb__Report_Type__c.field-meta.xml
<CustomField>
    <fullName>ff_frb__Report_Type__c</fullName>
    <description>Report type</description>
    <label>Report Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ff_frb__FinancialReportType</valueSetName>
    </valueSet>
</CustomField>