unpackaged/main/default/objects/ff_frb__Financial_Report__c/fields/ff_frb__Show_Soft_Date_Filter__c.field-meta.xml
<CustomField>
    <fullName>ff_frb__Show_Soft_Date_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Soft Date Filter Configuration</label>
    <type>Checkbox</type>
</CustomField>