unpackaged/main/default/objects/ff_frb__Financial_Report__c/fields/ff_frb__Soft_Date_Filter_Configuration__c.field-meta.xml
<CustomField>
    <fullName>ff_frb__Soft_Date_Filter_Configuration__c</fullName>
    <label>Soft Date Filter Configuration</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>