unpackaged/main/default/objects/ff_frb__Financial_Report__c/fields/ff_frb__TableConfiguration1__c.field-meta.xml
<CustomField>
    <fullName>ff_frb__TableConfiguration1__c</fullName>
    <description>First of the three configurations available for multi lens table.</description>
    <label>Table Configuration 1</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>