unpackaged/main/default/objects/ff_frb__Financial_Report__c/fields/ff_frb__Use_Current_Period_Date__c.field-meta.xml
<CustomField>
    <fullName>ff_frb__Use_Current_Period_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Current Period Date Override</label>
    <type>Checkbox</type>
</CustomField>